# ChatGPT-dash-app

./: .gitignore  Makefile  README.md  app.py  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-and-test.yml
app/: app.py
app/src/: chatgpt.py  schemas.py  simple.py  utils.py
licenses/: LICENSE_ChatGPT-dash-app  LICENSE_simpleaichat
src/: chatgpt.py  config.py  schemas.py  search.py  simple.py  utils.py
tests/: test_sys_prompt_dropdown.py
